# ML_Application_Bank

ml_application_bank/: LICENSE  Makefile  README.md  pyproject.toml  setup.py
ml_application_bank/docs/: Makefile  conf.py  index.rst  make.bat
ml_application_bank/notebooks/dataprep/: EDA.ipynb  data_transformation.ipynb  merge_files.ipynb
ml_application_bank/notebooks/regression/: EDA_feature_engineering.ipynb  linear_reg.ipynb
