[tool.poetry]
name = "ml-application-bank"
version = "0.1.0"
description = ""
authors = ["RatanaSovann <sovannratana2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
scikit-learn = "1.5.1"
jupyterlab = "4.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
folium = "^0.19.3"
openai = "^1.59.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
